Fixed bug with offscreen menu position on very small screens

--- a/kss-assets/kss.scss
+++ b/kss-assets/kss.scss
@@ -228,7 +228,7 @@ $kss-vertical-rhythm      : $kss-font-size * 1.5;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     top: 0;
     bottom: 0;
-    left: -100%;
+    left: -290px;
     position: fixed;
     overflow-x: hidden;
     overflow-y: auto;
